--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
    <head>
       <meta charset="UTF-8" />
-      <link rel="icon" href="/favicon.ico" />
+      <link rel="icon" href="src/assets/icons/icon-72x72.png" />
+      <!-- SEO -->
+      <link rel="manifest" href="./manifest.json" type="application/json" />
+      <meta name="theme-color" content="#FFFFFF" />
+      <meta name="description" content="Project slicing UI from any source into real interface using frontend tech stack" />
       <!-- Google font Montserrat -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,10 +14,10 @@
       <!-- Font Awesome 5 CDN -->
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>travel App 3</title>
+      <title>Project Slicing UI - Travel App 3</title>
    </head>
    <body>
-      <div id="app"></div>
+      <div class="bg-white md:w-8/12 lg:w-5/12 xl:w-4/12 mx-auto" id="app"></div>
       <script type="module" src="/src/main.js"></script>
    </body>
 </html>
