--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <title>Project Slicing UI - Travel App 3</title>
    </head>
    <body>
-      <div class="bg-white lg:w-5/12 xl:w-4/12 mx-auto" id="app"></div>
+      <div class="app" id="app"></div>
       <script type="module" src="/src/main.js"></script>
    </body>
 </html>
